--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.11",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
     "babel-loader": "^9.1.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
