--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
     "nodemon": "^3.0.1",
+    "react": "^18.2.0",
     "react-router-dom": "^6.16.0"
   }
 }
