--- a/package.json
+++ b/package.json
@@ -17,15 +17,20 @@
     "url": "https://github.com/Eevee5/UtilityTracker/issues"
   },
   "homepage": "https://github.com/Eevee5/UtilityTracker#readme",
+  "jest": {
+    "testEnvironment": "jsdom"
+  },
   "dependencies": {
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-react": "^7.22.15",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
+    "axios": "^1.5.1",
     "babel-loader": "^9.1.3",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
@@ -40,8 +45,14 @@
     "node": "^20.7.0",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
+    "react-router-dom": "^6.16.0",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.3",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^22.1.0"
   }
 }
