--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "dev": "webpack serve --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "jest": {
+    "verbose": true,
+    "testEnvironment": "jsdom"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Eevee5/UtilityTracker.git"
@@ -20,10 +24,12 @@
   },
   "homepage": "https://github.com/Eevee5/UtilityTracker#readme",
   "dependencies": {
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-react": "^7.22.15",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
-    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "babel-loader": "^9.1.3",
     "bcrypt": "^5.1.1",
@@ -32,11 +38,17 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-router-dom": "^6.16.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "jsdom": "^22.1.0"
   }
 }
