--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "jest": {
-    "verbose": true,
     "testEnvironment": "jsdom"
   },
   "repository": {
@@ -23,10 +22,8 @@
     "url": "https://github.com/Eevee5/UtilityTracker/issues"
   },
   "homepage": "https://github.com/Eevee5/UtilityTracker#readme",
-  "jest": {
-    "testEnvironment": "jsdom"
-  },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.22.15",
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-react": "^7.22.15",
     "@emotion/react": "^11.11.1",
@@ -41,6 +38,7 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jest": "^29.7.0",
@@ -49,6 +47,8 @@
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
     "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-github2": "^0.1.12",
     "react": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "webpack": "^5.88.2",
@@ -56,10 +56,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "devDependencies": {
-<<<<<<< HEAD
     "@testing-library/jest-dom": "^6.1.3",
-=======
->>>>>>> 5de3f8b914d6d24a77aeaca7cab4b299175f1a7e
     "jest-environment-jsdom": "^29.7.0",
     "jsdom": "^22.1.0"
   }
